<resources>
    <string name="app_name">AdotaPet</string>
    <!--<string name="cad_pessoa_fisica">Cadastro do perfil de pessoa física</string>-->
    <string name="edit_pessoa_fisica">Editar perfil de pessoa física</string>
    <string name="logradourdo">Logradouro</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="CEP">CEP</string>
    <string name="complemento">Complemento</string>
    <string name="usename">Username</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="CPF">CPF</string>
    <string name="email">E-mail</string>
    <string name="fone">Fone</string>
    <string name="avancar">Avançar</string>
    <string name="esqSenha">Recuperar Senha</string>
    <string name="recuperarSenha">Você receberá um e-mail para redefinir sua senha</string>
    <string name="confirmaFiliacao">Filiação realizada com sucesso</string>
    <string name="title_activity_cadastro_pessoa_fisica">CadastroPessoaFisica</string>
    <string name="Filiando_se">Filiando-se</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="select_item">Select Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="perfil">Perfil</string>
    <string name="info">Info</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="excluir_cadastro">Excluir cadastro</string>
    <string name="alterar_plano">Alterar plano</string>
    <string name="ong_s_filiada">ONG\'s filiada</string>
    <string name="sbre_o_app">Sbre o App</string>
    <string name="logout">Logout</string>
    <string name="george_luiz">George Luiz</string>
    <string name="verificado">Verificado</string>
    <string name="excluir_perfil">Excluir perfil</string>
    <string name="tem_certeza_excluir_perfil">Tem certeza que deseja excluir seu perfil</string>
    <string name="cadastro_realizado_com_sucesso">Cadastro realizado com sucesso</string>
</resources>