<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/edit_perfil"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/editar_perfil" />

    <item
        android:id="@+id/excluir_cadastro"
        android:icon="@drawable/ic_person_remove_24"
        android:title="@string/excluir_cadastro" />

    <item
        android:id="@+id/alterar_plano"
        android:icon="@drawable/ic_edit_note_24"
        android:title="@string/alterar_plano" />

    <item
        android:id="@+id/ONG_filiada"
        android:icon="@drawable/ic_domain_add_24"
        android:title="@string/ong_s_filiada" />

    <item
        android:id="@+id/sobre_app"
        android:icon="@drawable/ic_business_center_24"
        android:title="@string/sbre_o_app" />

    <item
        android:id="@+id/logout_cad"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/logout" />

</menu>